; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/intel/atom/extr_sst-mfld-platform-pcm.c_sst_media_close.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/intel/atom/extr_sst-mfld-platform-pcm.c_sst_media_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { %struct.TYPE_11__* }
%struct.TYPE_11__ = type { %struct.TYPE_10__* }
%struct.TYPE_10__ = type { i32 }
%struct.snd_pcm_substream = type { %struct.TYPE_7__* }
%struct.TYPE_7__ = type { %struct.sst_runtime_stream* }
%struct.sst_runtime_stream = type { %struct.TYPE_9__*, %struct.TYPE_8__ }
%struct.TYPE_9__ = type { i32 (%struct.TYPE_11__*, i32)* }
%struct.TYPE_8__ = type { i32 }
%struct.snd_soc_dai = type { i32 }

@sst = common dso_local global %struct.TYPE_12__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_pcm_substream*, %struct.snd_soc_dai*)* @sst_media_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sst_media_close(%struct.snd_pcm_substream* %0, %struct.snd_soc_dai* %1) #0 {
  %3 = alloca %struct.snd_pcm_substream*, align 8
  %4 = alloca %struct.snd_soc_dai*, align 8
  %5 = alloca %struct.sst_runtime_stream*, align 8
  %6 = alloca i32, align 4
  store %struct.snd_pcm_substream* %0, %struct.snd_pcm_substream** %3, align 8
  store %struct.snd_soc_dai* %1, %struct.snd_soc_dai** %4, align 8
  %7 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %3, align 8
  %8 = getelementptr inbounds %struct.snd_pcm_substream, %struct.snd_pcm_substream* %7, i32 0, i32 0
  %9 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 0
  %11 = load %struct.sst_runtime_stream*, %struct.sst_runtime_stream** %10, align 8
  store %struct.sst_runtime_stream* %11, %struct.sst_runtime_stream** %5, align 8
  %12 = load %struct.sst_runtime_stream*, %struct.sst_runtime_stream** %5, align 8
  %13 = call i32 @power_down_sst(%struct.sst_runtime_stream* %12)
  %14 = load %struct.sst_runtime_stream*, %struct.sst_runtime_stream** %5, align 8
  %15 = getelementptr inbounds %struct.sst_runtime_stream, %struct.sst_runtime_stream* %14, i32 0, i32 1
  %16 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  store i32 %17, i32* %6, align 4
  %18 = load i32, i32* %6, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %31

20:                                               ; preds = %2
  %21 = load %struct.sst_runtime_stream*, %struct.sst_runtime_stream** %5, align 8
  %22 = getelementptr inbounds %struct.sst_runtime_stream, %struct.sst_runtime_stream* %21, i32 0, i32 0
  %23 = load %struct.TYPE_9__*, %struct.TYPE_9__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %23, i32 0, i32 0
  %25 = load i32 (%struct.TYPE_11__*, i32)*, i32 (%struct.TYPE_11__*, i32)** %24, align 8
  %26 = load %struct.TYPE_12__*, %struct.TYPE_12__** @sst, align 8
  %27 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %26, i32 0, i32 0
  %28 = load %struct.TYPE_11__*, %struct.TYPE_11__** %27, align 8
  %29 = load i32, i32* %6, align 4
  %30 = call i32 %25(%struct.TYPE_11__* %28, i32 %29)
  br label %31

31:                                               ; preds = %20, %2
  %32 = load %struct.TYPE_12__*, %struct.TYPE_12__** @sst, align 8
  %33 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %32, i32 0, i32 0
  %34 = load %struct.TYPE_11__*, %struct.TYPE_11__** %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %34, i32 0, i32 0
  %36 = load %struct.TYPE_10__*, %struct.TYPE_10__** %35, align 8
  %37 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @module_put(i32 %38)
  %40 = load %struct.sst_runtime_stream*, %struct.sst_runtime_stream** %5, align 8
  %41 = call i32 @kfree(%struct.sst_runtime_stream* %40)
  ret void
}

declare dso_local i32 @power_down_sst(%struct.sst_runtime_stream*) #1

declare dso_local i32 @module_put(i32) #1

declare dso_local i32 @kfree(%struct.sst_runtime_stream*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
